Trying to fix spacing for mobile

--- a/match.css
+++ b/match.css
@@ -431,7 +431,9 @@ button {
     }
     main {
         flex-direction: column;
+        justify-content: center;
         margin: 0;
+        padding: 0 2px;
     }
     footer {
         display: none;
